[gd_scene load_steps=25 format=2]

[ext_resource path="res://bear.gd" type="Script" id=1]
[ext_resource path="res://Bear.png" type="Texture" id=2]
[ext_resource path="res://inbetween vars.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "attack_left",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "attack_right",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "stand_left",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "stand_right",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 11.5, 10 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 78, 45 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 77.5, 45.5 )

[sub_resource type="RectangleShape2D" id=21]

[node name="Node2D" type="Node2D"]

[node name="bear" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="bear_sprite" type="AnimatedSprite" parent="bear"]
frames = SubResource( 17 )
animation = "stand_left"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="bear"]
position = Vector2( -0.5, 0 )
shape = SubResource( 18 )

[node name="bear_sight_area" type="Area2D" parent="bear"]
scale = Vector2( 0.16, 0.200001 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bear/bear_sight_area"]
shape = SubResource( 19 )

[node name="Initiate" type="Area2D" parent="bear"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="bear/Initiate"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 20 )

[node name="hitbox" type="Area2D" parent="bear"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="bear/hitbox"]
shape = SubResource( 21 )

[connection signal="area_entered" from="bear/bear_sight_area" to="bear" method="_on_bear_sight_area_area_entered"]
[connection signal="area_exited" from="bear/bear_sight_area" to="bear" method="_on_bear_sight_area_area_exited"]
[connection signal="body_entered" from="bear/bear_sight_area" to="bear" method="_on_bear_sight_area_body_entered"]
[connection signal="body_exited" from="bear/bear_sight_area" to="bear" method="_on_bear_sight_area_body_exited"]
[connection signal="area_entered" from="bear/hitbox" to="bear" method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="bear/hitbox" to="bear" method="_on_hitbox_area_exited"]
